{Add, Refactor} tests to components
feeling awful to do this way, need to learn how to do it better

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@vue/test-utils": "1.0.0-beta.25",
     "vue": "^2.4.4",
+    "vue-server-renderer": "2.6.10",
+    "vue-template-compiler": "2.6.10",
     "vue-test-utils": "1.0.0-beta.11",
     "vuex": "3.1.1"
   },
